--- a/planner2/package.json
+++ b/planner2/package.json
@@ -7,6 +7,8 @@
     "angular2": "^2.0.0-beta.6",
     "es6-promise": "^3.1.2",
     "es6-shim": "0.33.3",
+    "google-auth-library": "^0.9.7",
+    "googleapis": "^2.1.7",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
     "systemjs": "0.19.20",
