--- a/angular2/angular2-forms/package.json
+++ b/angular2/angular2-forms/package.json
@@ -11,5 +11,20 @@
     "forms"
   ],
   "author": "joe risk",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "angular2": "^2.0.0-beta.7",
+    "bootstrap": "^3.3.6",
+    "es6-promise": "^3.1.2",
+    "es6-shim": "^0.34.4",
+    "express": "^4.13.4",
+    "nodemon": "^1.9.1",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "^5.0.0-beta.2",
+    "systemjs": "^0.19.23",
+    "typescript": "^1.8.2",
+    "typings": "^0.6.8",
+    "zone.js": "^0.5.15"
+  },
+  "devDependencies": {}
 }
