--- a/angular2/angular2-forms/tsconfig.json
+++ b/angular2/angular2-forms/tsconfig.json
@@ -1,5 +1,6 @@
 {
 	"compilerOptions": {
+		"target": "ES5",
 		"module": "system",
 		"moduleResolution": "node",
 		"emitDecoratorMetadata": true,
@@ -12,6 +13,8 @@
 	"exclude": [
 		"node_modules",
 		"typings/main",
-		"typings/main.d.ts"
+		"typings/main.d.ts",
+		"typings/browser/",
+		"typings/browser.d.ts"
 	]
 }
