ts files compiled different after targer es5 and version changes

--- a/angular2/angular2-forms/tsconfig.json
+++ b/angular2/angular2-forms/tsconfig.json
@@ -1,20 +1,15 @@
 {
 	"compilerOptions": {
-		"target": "ES5",
+		"target": "ES6",
 		"module": "system",
 		"moduleResolution": "node",
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
 		"noImplicitAny": false,
 		"removeComments": false,
-		"preserveConstEnums": true,
 		"sourceMap": true
 	},
 	"exclude": [
-		"node_modules",
-		"typings/main",
-		"typings/main.d.ts",
-		"typings/browser/",
-		"typings/browser.d.ts"
+		"node_modules"
 	]
 }
