--- a/planner2/package.json
+++ b/planner2/package.json
@@ -5,11 +5,22 @@
   "main": "index.js",
   "dependencies": {
     "angular2": "^2.0.0-beta.6",
+    "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
     "es6-promise": "^3.1.2",
     "es6-shim": "0.33.3",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.13.0",
     "google-auth-library": "^0.9.7",
     "googleapis": "^2.1.7",
+    "method-override": "^2.3.5",
     "moment": "^2.12.0",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.0",
+    "passport-google": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
     "systemjs": "0.19.20",
