--- a/planner2/package.json
+++ b/planner2/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "angular2": "^2.0.0-beta.6",
+    "bcrypt": "^0.8.5",
     "body-parser": "^1.15.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.1",
     "es6-promise": "^3.1.2",
     "es6-shim": "0.33.3",
@@ -15,12 +17,15 @@
     "googleapis": "^2.1.7",
     "method-override": "^2.3.5",
     "moment": "^2.12.0",
+    "mongoose": "^4.4.11",
     "morgan": "^1.7.0",
+    "orchestrate": "^0.8.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.0",
     "passport-google": "^0.3.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
+    "q": "^1.4.1",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
     "systemjs": "0.19.20",
