--- a/nodeauth/scotch/package.json
+++ b/nodeauth/scotch/package.json
@@ -15,6 +15,7 @@
     "passport": "~0.1.17",
     "passport-facebook": "~1.0.2",
     "passport-google-oauth": "~0.1.5",
+    "passport-google-oauth20": "^1.0.0",
     "passport-local": "~0.1.6",
     "passport-twitter": "~1.0.2"
   },
